<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartUpScreen"
    android:background="@color/white"
    android:padding="30dp">
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/make_a_call"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logo"
            android:textAlignment="center"
            android:layout_marginTop="120dp"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textAllCaps="true"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/login"
                android:onClick="callLoginScreen"
                android:background="@color/colorPrimary"
                android:layout_weight="1"
                android:transitionName="transition_login"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:onClick="callSignupScreen"
                android:background="@color/colorPrimary"
                android:transitionName="transition_signup"
                android:text="@string/signup"
                android:textColor="@color/black" />


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_we_work"
            android:background="#00000000"
            android:textColor="@color/black"
            android:layout_weight="1"
     />
    </LinearLayout>


</ScrollView>