<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".VerifyOTP"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_icon"
            android:padding="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:text="@string/otp_code"
            android:gravity="center"
            android:textSize="100sp"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:layout_gravity="center"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:layout_gravity="center"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_desc"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>


        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="35dp"
            app:itemHeight="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:lineColor="@color/black"
            android:background="@color/lightwhite"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/black"
            app:itemRadius="5dp"
            app:hideLineWhenFilled="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/otp_verifycode"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:textColor="@color/white"/>




    </LinearLayout>

</ScrollView>