<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:scrollbars="none"
    android:transitionName="transition_signup"
    android:background="@drawable/gradientgrain">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:elevation="20dp"
        android:layout_margin="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="100dp"
                android:elevation="20dp">

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/gradientgrain">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/register_icon"
                        android:tint="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Signup"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="26sp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:orientation="vertical"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullname"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    android:textColorHint="@color/black"
                    app:startIconDrawable="@drawable/fullname_icon"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorAccent"
                    app:hintTextColor="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    android:textColorHint="@color/black"
                    app:startIconDrawable="@drawable/username_icon"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorAccent"
                    app:hintTextColor="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    android:textColorHint="@color/black"
                    app:startIconDrawable="@drawable/email_icon"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorAccent"
                    app:hintTextColor="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    android:textColorHint="@color/black"
                    app:startIconDrawable="@drawable/password_icon"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorAccent"
                    app:hintTextColor="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.hbb20.CountryCodePicker
                    android:id="@+id/signup_ccp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ccp_autoDetectCountry="true"
                    android:layout_marginTop="5dp"
                    app:ccp_showFlag="true"
                    app:ccp_textSize="16sp"
                    app:ccp_showNameCode="true"
                    app:ccp_showFullName="true"
                    android:background="@drawable/black_border"
                    android:padding="5dp"
                    />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    android:textColorHint="@color/black"
                    app:startIconDrawable="@drawable/phone_icon"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorAccent"
                    app:hintTextColor="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choose Gender"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"/>

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:textSize="14sp"/>

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female"/>



                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Your Age"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <DatePicker
                    android:id="@+id/age_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    android:spinnersShown="true"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signup_btn"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="SIGNUP"
                    android:layout_marginTop="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center"
                    app:iconGravity="textStart"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="50dp"/>
            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>