<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:scrollbars="none"
    android:transitionName="transition_login"
    android:background="@drawable/gradientgrain">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:elevation="20dp"
        android:layout_margin="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="100dp"
                android:elevation="20dp">

                <LinearLayout
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/gradientgrain">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/username_icon"
                        android:tint="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Login"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="26sp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:orientation="vertical"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    android:textColorHint="@color/black"

                    app:startIconDrawable="@drawable/email_icon"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorAccent"
                    app:hintTextColor="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    >



                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    android:textColorHint="@color/black"

                    app:startIconDrawable="@drawable/password_icon"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorAccent"
                    app:hintTextColor="@color/black"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="25dp"
                    app:boxCornerRadiusBottomStart="25dp"
                    app:boxCornerRadiusTopStart="25dp"
                    app:boxCornerRadiusTopEnd="25dp"
                    >



                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_btn"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="Login"
                    android:layout_marginTop="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_gravity="center"
                    app:iconGravity="textStart"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="50dp"/>

                <Button
                    android:id="@+id/sendtosignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:background="#00000000"
                    android:layout_gravity="center"
                    android:textColor="@color/black"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_phone_btn"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="Login with phone"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:icon="@drawable/phone_icon"
                    android:layout_gravity="center"
                    app:iconGravity="textStart"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorPhone"
                    app:cornerRadius="50dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_twitter_btn"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="Login with twitter"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:icon="@drawable/twitter_icon"
                    android:layout_gravity="center"
                    app:iconGravity="textStart"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorTwitter"
                    app:cornerRadius="50dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_google_btn"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="Login with google"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:icon="@drawable/google_icon"
                    android:layout_gravity="center"
                    app:iconGravity="textStart"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorGoogle"
                    app:cornerRadius="50dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_facebook_btn"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="Login with facebook"
                    android:textAllCaps="false"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:icon="@drawable/facebook_icon"
                    android:layout_gravity="center"
                    app:iconGravity="textStart"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:drawableLeft="@drawable/facebook_icon"
                    android:backgroundTint="@color/colorFacebook"
                    app:cornerRadius="50dp"/>


            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>




</ScrollView>